_assets/styles/core/_helper.scss
.top-buffer {
  margin-top: 1rem;
}

.bottom-buffer {
  margin-bottom: 1rem;
}

.lazy:not(div,ul) {
  opacity: 0;
}

.loaded {
  animation: fadeIn 0.5s ease-in;
  animation-fill-mode: forwards;
}

@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}

